--- a/3 Periodo/Frameworks Front-end/26_07_2022/htmlBasics.html
+++ b/3 Periodo/Frameworks Front-end/26_07_2022/htmlBasics.html
@@ -31,6 +31,7 @@
         <h6>Anatomy of an HTML element</h6>
         <p>Let's explore this paragraph element a bit further.</p>
         <br />
+        <img src="img1.png" class="img-fluid" alt="Elemento parágrafo">
         <br />
         <p>The main parts of our element are as follows:</p>
         <ol>
@@ -48,6 +49,31 @@
             </li>
         </ol>
         <p>Elements can also have attributes that look like the following:</p>
+        <br>
+        <img src="img2.png" class="img-fluid" alt="Atributos de elementos">
+        <br>
+        <br>
+        <p>Attributes contain extra information about the element that you don't want to appear in the actual content. Here, <code>class</code> is the attribute <i>name</i> and <code>editor-note</code> is the attribute <i>value</i>. The <code>class</code> attribute allows you to give the element a non-unique identifier that can be used to
+        target it (and any other elements with the same <code>class</code> value) with style information and other
+        things.</p>
+        <p>An attribute should always have the following:</p>
+        <ol>
+            <li>A space between it and the element name (or the previous attribute, if the element already has one or more attributes).</li>
+            <li>The attribute name followed by an equal sign.</li> 
+            <li>The attribute value wrapped by opening and closing quotation marks.</li>
+        </ol>
+        <br>
+        <div class="container-fluid"> 
+            <div class="row">
+                <div class="col-1"></div>
+                <div class="col-11 ">Note: Simple attribute values that don't contain ASCII whitespace (or any of the characters " ' ` = &lt; &gt; ) can remain unquoted, but it is recommended that you quote all attribute values, as it makes the code more consistent and understandable.</div>
+            </div>            
+        </div>
+        <br>
+
+        <h6>Nesting elements</h6>
+        <p>You can put elements inside other elements too — this is called nesting. If we wanted to state that our cat, we could wrap the word "very" in a <code>&lt;strong&gt;</code> element, which means that the word is to be strongly emphasized:</p>
+        <code>&lt;p>My cat is &lt;strong>very&lt;/strong> grumpy.&lt;/p></code>
     </div>
 </body>
 </html>
